Checkout Assingment submission
